# seafile-client

./: .travis.yml  CMakeLists.txt  Info.plist  README.md  genapp.sh  qt.css  seafile-client.pro  seafile-client.qrc  seafile.icns
extensions/: context-menu.cpp
fsplugin/: CMakeLists.txt  FinderSync.h  FinderSync.mm  FinderSyncClient.h  FinderSyncClient.mm  Info.plist  build.sh
src/: account-mgr.cpp  account-mgr.h  account.h  configurator.cpp  configurator.h  ext-handler.cpp  ext-handler.h  fsplugin-handler.h  fsplugin-handler.mm  main.cpp  repo-service.cpp  repo-service.h  seafile-applet.cpp  seafile-applet.h
src/api/: requests.cpp  requests.h
src/filebrowser/: auto-update-mgr.cpp  data-mgr.cpp  data-mgr.h  file-browser-dialog.cpp  file-browser-dialog.h  file-table.cpp  file-table.h  transfer-mgr.cpp  transfer-mgr.h
src/ui/: account-view.cpp  cloud-view.cpp  download-repo-dialog.cpp  init-seafile-dialog.cpp  login-dialog.cpp  login-dialog.h  repos-tab.cpp  tray-icon.cpp
src/utils/: utils-mac.h  utils-mac.mm  utils.cpp  utils.h
ui/: init-seafile-dialog.ui  init-vdrive-dialog.ui  settings-dialog.ui
